# trading-bot

./: .gitignore  CMakeLists.txt  GITHUB_PAGES.md  README.md  _config.yml  config.json  create_custom_config.sh  test_configs.sh
_layouts/: default.html
configs/: aggressive_aapl.json  crypto_longterm.json  volatile_daytrader.json
docs/: CONFIG_GUIDE.md  QUICK_REFERENCE.md  TRADING_GUIDE.md  config.md  reference.md  trading.md
src/: BinanceAPI.cpp  BinanceAPI.h  ExchangeAPI.h  SMAStrategy.cpp  SMAStrategy.h  YahooFinanceAPI.cpp  YahooFinanceAPI.h  backtest_yahoo.cpp  candle.h  config.h  configurable_backtest.cpp  interval.h  main.cpp  multi_backtest.cpp  order.h  paperengine.cpp  paperengine.h  strategy.h  tradingbot.cpp  tradingbot.h  yahoo_demo.cpp
